--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     [hidden] {display: none;}
 
     :root {
-      background: linear-gradient(180deg, hsl(220 74% 91% / 1) 0%, hsl(280 100% 87% / 1) 100%);
       color: white;
       background-position: fixed;
       font-family: 'League Script', cursive;
       min-height: 100vh;
+      /* filter: url(#roughpaper); */
+      background: linear-gradient(180deg, hsl(220 74% 91% / 1) 0%, hsl(280 100% 87% / 1) 100%);
     }
     .trampampam {
       min-height: 100vh;
@@ -92,7 +93,17 @@
     <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4" />
     <feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
 </filter>
+
 </svg>
+
+<!-- <svg width="0" height="0">
+<filter id='roughpaper' x='0%' y='0%' width='100%' height="100%">
+  <feTurbulence type="fractalNoise" baseFrequency='0.04' result='noise' numOctaves="5" />
+  <feDiffuseLighting in='noise' lighting-color='white' surfaceScale='2'>
+      <feDistantLight azimuth='45' elevation='60' />
+  </feDiffuseLighting>
+</filter>
+</svg> -->
 
 <!-- <svg width="650" height="500">
 
