--- a/index.html
+++ b/index.html
@@ -7,96 +7,104 @@
   <style>
     *,*::before,*::after{box-sizing:border-box}ul[class],ol[class]{padding:0}body,h1,h2,h3,h4,p,ul[class],ol[class],figure,blockquote,dl,dd{margin:0}html{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeSpeed;line-height:1.5}ul[class],ol[class]{list-style:none}a:not([class]){text-decoration-skip-ink:auto}img,picture{max-width:100%;display:block}article>*+*{margin-top:1em}input,button,textarea,select{font:inherit}img:not([alt]){filter:blur(10px)}@media(prefers-reduced-motion:reduce){*{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}
     [hidden] {display: none;}
+    .visuallyhidden {display: block; width: 0; height: 0}
 
     :root {
       color: white;
       background-position: fixed;
       font-family: 'League Script', cursive;
-      min-height: 100vh;
       /* filter: url(#roughpaper); */
-      background: linear-gradient(180deg, hsl(220 74% 91% / 1) 0%, hsl(280 100% 87% / 1) 100%);
+      background: url(blossom.svg), linear-gradient(180deg, hsl(220 74% 91% / 1), hsl(220 74% 91% / 0));
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      animation: 10.8s linear infinite alternate bg;
+    }
+    @keyframes bg {
+      from { background-color: hsl(280 74% 91% / 1)}
+      to {background-color: hsl(360 74% 91% / 1)}
     }
     .trampampam {
-      min-height: 100vh;
+      height: 100vh;
+      height: -webkit-fill-available;
+      height: stretch;
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: center;
       overflow: hidden;
     }
-    .trampampam:after {
+    .cloud {
       content: '';
       position: absolute;
       top: 0;
       left: 0;
       filter: url(#cloud-filter);
       z-index: -1;
-      width: 60vw;
-      height: 30vh;
+      width: 200px;
+      height: 200px;
+      margin-top: -100px;
       background: radial-gradient(white 0%, transparent 50%);
+      /* box-shadow: inset 0 0 100px -50px white; */
       animation: 10.8s linear infinite alternate move;
+      /* Safari workaround */
+      transform: translateZ(0);
     }
     @keyframes move {
-      from { transform: translate(0, 0); height: 30vh; width: 60vw; }
-      to { transform: translate(40vw, 0); height: 50vh; width: 30vw; }
+      from { transform: translate3d(0, 0, 0);}
+      to { transform: translate3d(150px, 0, 0); }
     }
     .trampampam h1 {
-      opacity: 0;
       animation: 3s both fadein, .5s linear both infinite squiggly;
-      font-size: 4rem;
+      font-size: 8vmin;
+      line-height: 1.08;
+      color: white;
     }
     @keyframes fadein {
-      from {opacity: 0}
-      to {opacity: 1}
+      0% {opacity: 0}
+      100% {opacity: 1}
     }
     @keyframes squiggly {
-      0% {
-        filter: url("#squiggly-0");
-      }
-      25% {
-        filter: url("#squiggly-3");
-      }
-      50% {
-        filter: url("#squiggly-2");
-      }
-      75% {
-        filter: url("#squiggly-1");
-      }
-      100% {
-        filter: url("#squiggly-4");
-      }
+      0% {filter: url("#squiggly-0");}
+      25% {filter: url("#squiggly-3");}
+      50% {filter: url("#squiggly-2");}
+      75% {filter: url("#squiggly-1");}
+      100% {filter: url("#squiggly-4");}
     }
   </style>
 </head>
 
-<svg width="0" height="0" hidden>
-<filter id="cloud-filter"><feTurbulence type="fractalNoise" baseFrequency="0.003" numOctaves="10" seed="135"></feTurbulence><feDisplacementMap in="SourceGraphic" scale="459"></feDisplacementMap></filter>
-<filter id="squiggly-0">
-    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0" />
-    <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="6" />
-</filter>
-<filter id="squiggly-1">
-    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1" />
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
-</filter>
-
-<filter id="squiggly-2">
-    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2" />
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
-</filter>
-<filter id="squiggly-3">
-    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3" />
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
-</filter>
-
-<filter id="squiggly-4">
-    <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4" />
-    <feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
-</filter>
-
+<svg class="visuallyhidden">
+  <defs>
+    <filter id="cloud-filter">
+      <feTurbulence type="fractalNoise" baseFrequency="0.003" numOctaves="10" seed="135"></feTurbulence>
+      <feDisplacementMap in="SourceGraphic" scale="459"></feDisplacementMap>
+    </filter>
+    <filter id="squiggly-0">
+        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="0" />
+        <feDisplacementMap id="displacement" in="SourceGraphic" in2="noise" scale="6" />
+    </filter>
+    <filter id="squiggly-1">
+        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="1" />
+        <feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
+    </filter>
+    <filter id="squiggly-2">
+        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="2" />
+        <feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
+    </filter>
+    <filter id="squiggly-3">
+        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="3" />
+        <feDisplacementMap in="SourceGraphic" in2="noise" scale="8" />
+    </filter>
+    <filter id="squiggly-4">
+        <feTurbulence id="turbulence" baseFrequency="0.02" numOctaves="3" result="noise" seed="4" />
+        <feDisplacementMap in="SourceGraphic" in2="noise" scale="6" />
+    </filter>
+  </defs>
 </svg>
 
-<!-- <svg width="0" height="0">
+<!-- <svg>
 <filter id='roughpaper' x='0%' y='0%' width='100%' height="100%">
   <feTurbulence type="fractalNoise" baseFrequency='0.04' result='noise' numOctaves="5" />
   <feDiffuseLighting in='noise' lighting-color='white' surfaceScale='2'>
@@ -106,7 +114,6 @@
 </svg> -->
 
 <!-- <svg width="650" height="500">
-
     <filter id='roughpaper' x='0%' y='0%' width='100%' height="100%">
 
         <feTurbulence type="fractalNoise" baseFrequency='0.04' result='noise' numOctaves="5" />
@@ -118,6 +125,11 @@
     <rect x="0" y="0" width="100%" height="100%" filter="url(#roughpaper)" fill="none"/>
 </svg> -->
 
+<!-- <div class="cloud"></div> -->
+
 <main class="trampampam">
-  <h1>TramPamPam</h1>
+  <h1 align="center">
+    Tram<br/>
+    PamPam
+  </h1>
 </main>
